Add download details

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </div>
       </div>
       <div class="row flex-center child-borders">
-        <a href="#flexbox" class="paper-btn margin">Download</a>
+        <a href="#download" class="paper-btn margin">Download</a>
         <a href="#flexbox" class="paper-btn margin">Docs</a>
         <a href="#about" class="paper-btn margin">About</a>
-        <a href="" class="paper-btn margin">Github</a>
+        <a href="https://github.com/rhyneav/papercss" class="paper-btn margin">Github</a>
       </div>
     </div>
     <div id="flexbox" class="section">
@@ -191,12 +191,13 @@
     </div>
     <div class="section">
       <h2>Buttons</h2>
-      <p>Borrowed from <a href="https://codepen.io/tmrDevelops/pen/VeRvKX" target="_blank">Imprefect Buttons</a></p>
+      <p>Insprired by <a href="https://codepen.io/tmrDevelops/pen/VeRvKX" target="_blank">Imprefect Buttons</a></p>
       <button class="btn-large">Large</button>
       <button>Default</button>
       <button class="btn-small">Small</button>
       <div class="docs">
         <pre>
+&lt;p&gt;Insprired by &lt;a href=&quot;https://codepen.io/tmrDevelops/pen/VeRvKX&quot; target=&quot;_blank&quot;&gt;Imprefect Buttons&lt;/a&gt;&lt;/p&gt;
 &lt;button class=&quot;btn-large&quot;&gt;Large&lt;/button&gt;
 &lt;button&gt;Default&lt;/button&gt;
 &lt;button class=&quot;btn-small&quot;&gt;Small&lt;/button&gt;</pre>
@@ -619,6 +620,18 @@ function add(x, y) {
       <h4>No Responsive &amp; No Borders</h4>
       <p>If you don't like the default, you can just add the class <code>no-responsive</code> to prevent the image from being responsive. You can also remove the default border with <code>no-border</code>.</p>
       <img src="https://unsplash.it/300" alt="Not responsive Unsplash" class="no-responsive no-border">
+    </div>
+    <div class="section">
+      <h2 id="download">Download</h2>
+      <p>Links coming soon!</p>
+      <p>In the meantime, you can build the CSS yourself via the git repo</p>
+      <ol>
+        <li><code>git clone https://github.com/rhyneav/papercss.git</code></li>
+        <li><code>npm install</code></li>
+        <li><code>npm run build</code></li>
+        <li>Grab the CSS out of the /dist folder created</li>
+      </ol>
+      <p>You can also go into colors.less to change around the colors of your new CSS.</p>
     </div>
     <div class="section">
       <h2 id="about">About</h2>
