--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="demo-title">
       <div class="row flex-center">
         <div class="text-center">
-          <h1>Paper CSS</h1>
+          <h1>PaperCSS</h1>
           <h3>the less formal css framework</h3>
         </div>
       </div>
@@ -26,7 +26,7 @@
     <div id="flexbox" class="section">
       <h2>Flexbox</h2>
       <h4>Flexgrid</h4>
-      <p>The flexgrid is a base 12 grid system that utilizes 3 different view widths.</p>
+      <p>The flexgrid is a grid system that supports up to 12 columns per row. Because it uses flexbox (rather than just %widths), we also get the benefit of the fun parts of flexbox like alignment in more complex ways than normal.</p>
       <div class="demo">
         <div class="row">
           <div class="col-4 col">col-4 col</div>
@@ -737,8 +737,8 @@ function add(x, y) {
     </div>
     <div class="section">
       <h2 id="about">About</h2>
-      <p>I got tired of mODerN STylEs and clean pages on the internet. I also wanted to learn more about Flexbox and Less. So I made Paper CSS to solve these two challenges of mine :)</p>
-      <p>The goal of Paper CSS is to be as minimal as possible when adding classes. For example, a button should just look like a paper button. There shouldn't be a need to add a class such as <code>paper-button</code>. Because of this, adding Paper CSS to a markdown generated page should instantly paper-ize it.</p>
+      <p>I got tired of mODerN STylEs and clean pages on the internet. I also wanted to learn more about Flexbox and Less. So I made PaperCSS to solve these two challenges of mine :)</p>
+      <p>The goal of PaperCSS is to be as minimal as possible when adding classes. For example, a button should just look like a paper button. There shouldn't be a need to add a class such as <code>paper-button</code>. Because of this, adding PaperCSS to a markdown generated page should instantly paper-ize it.</p>
       <p>While I'm proud of how it's turned out so far, I think there's a lot that can still be done to make it better. Such things as refactoring, adding more utility classes and more border types (like dashed/dotted) could really polish off this framework. That's why it's open sourced and available for pull requests!</p>
       <p>If you are new to Git or Less, this would be a great project to get your feet wet with. I'd be happy to help walk you through the pull request process. Check out the Git repo for more info!</p>
     </div>
