Add block buttons, block inputs, and more paper-y <hr>

--- a/index.html
+++ b/index.html
@@ -196,19 +196,37 @@
       <button class="btn-large">Large</button>
       <button>Default</button>
       <button class="btn-small">Small</button>
+      <a href="#" class="paper-btn">Link</a>
+      <div class="row">
+        <div class="col-6 col">
+          <button class="btn-block">Block level</button>
+        </div>
+      </div>
       <div class="docs">
         <pre>
-&lt;p&gt;Insprired by &lt;a href=&quot;https://codepen.io/tmrDevelops/pen/VeRvKX&quot; target=&quot;_blank&quot;&gt;Imprefect Buttons&lt;/a&gt;&lt;/p&gt;
-&lt;button class=&quot;btn-large&quot;&gt;Large&lt;/button&gt;
-&lt;button&gt;Default&lt;/button&gt;
-&lt;button class=&quot;btn-small&quot;&gt;Small&lt;/button&gt;</pre>
+
+        </pre>
       </div>
     </div>
     <div class="section">
       <h2>Forms</h2>
       <div class="form-group">
         <label>Input</label>
-        <input type="text">
+        <input type="text" placeholder="Nice input">
+      </div>
+      <div class="row">
+        <div class="col sm-4">
+          <div class="form-group">
+            <label>Block Level</label>
+            <input class="input-block" type="text">
+          </div>
+        </div>
+        <div class="col sm-8">
+          <div class="form-group">
+            <label>Block Level</label>
+            <input class="input-block" type="text">
+          </div>
+        </div>
       </div>
       <div class="form-group">
         <label>Select</label>
@@ -238,36 +256,7 @@
       </fieldset>
       <div class="docs">
         <pre>
-&lt;div class=&quot;form-group&quot;&gt;
-  &lt;label&gt;Input&lt;/label&gt;
-  &lt;input type=&quot;text&quot;&gt;
-&lt;/div&gt;
-&lt;div class=&quot;form-group&quot;&gt;
-  &lt;label&gt;Select&lt;/label&gt;
-  &lt;select&gt;
-    &lt;option value=&quot;1&quot;&gt;Option 1&lt;/option&gt;
-    &lt;option value=&quot;2&quot;&gt;Option 2&lt;/option&gt;
-    &lt;option value=&quot;3&quot;&gt;Option 3&lt;/option&gt;
-  &lt;select&gt;
-&lt;/div&gt;
-&lt;fieldset class=&quot;form-group&quot;&gt;
-  &lt;legend&gt;Some Radio Buttons&lt;/legend&gt;
-  &lt;label for=&quot;paperRadios1&quot; class=&quot;paper-radio&quot;&gt; 
-    &lt;input type=&quot;radio&quot; name=&quot;paperRadios&quot; id=&quot;paperRadios1&quot; value=&quot;option 1&quot;&gt; &lt;span&gt;This is the first option&lt;span&gt;
-  &lt;/label&gt;
-  &lt;label for=&quot;paperRadios2&quot; class=&quot;paper-radio&quot;&gt; 
-    &lt;input type=&quot;radio&quot; name=&quot;paperRadios&quot; id=&quot;paperRadios2&quot; value=&quot;option 2&quot;&gt; &lt;span&gt;This is the second option&lt;span&gt;
-  &lt;/label&gt;
-&lt;/fieldset&gt;
-&lt;fieldset class=&quot;form-group&quot;&gt;
-  &lt;legend&gt;Some Check Boxes&lt;/legend&gt;
-  &lt;label for=&quot;paperChecks1&quot; class=&quot;paper-check&quot;&gt;
-    &lt;input type=&quot;checkbox&quot; name=&quot;paperChecks&quot; id=&quot;paperChecks1&quot; value=&quot;option 1&quot;&gt; &lt;span&gt;This is the first check&lt;/span&gt;
-  &lt;/label&gt;
-  &lt;label for=&quot;paperChecks2&quot; class=&quot;paper-check&quot;&gt;
-    &lt;input type=&quot;checkbox&quot; name=&quot;paperChecks&quot; id=&quot;paperChecks2&quot; value=&quot;option 2&quot;&gt; &lt;span&gt;This is the second check&lt;/span&gt;
-  &lt;/label&gt;
-&lt;/fieldset&gt;</pre>
+</pre>
       </div>
     </div>
     <div class="section">
@@ -725,15 +714,23 @@ function add(x, y) {
     </div>
     <div class="section">
       <h2 id="download">Download</h2>
-      <p>Links coming soon!</p>
-      <p>In the meantime, you can build the CSS yourself via the git repo</p>
+      <p>Download version 0.0.0 using either of the links below.</p>
+      <div class="row flex-spaces text-center">
+        <div class="sm-4 col">
+          <a class="paper-btn" href="https://github.com/rhyneav/papercss/releases/download/v0.0.0/styles.css">CSS File</a>
+        </div>
+        <div class="sm-4 col">
+          <a class="paper-btn" href="https://github.com/rhyneav/papercss/releases/download/v0.0.0/styles.min.css">Minified CSS File</a>
+        </div>
+      </div>
+      <p>If you'd rather customize things, you can build the CSS yourself via the git repo</p>
       <ol>
-        <li><code>git clone https://github.com/rhyneav/papercss.git</code></li>
+        <li><code>git clone [repo url]</code></li>
         <li><code>npm install</code></li>
         <li><code>npm run build</code></li>
         <li>Grab the CSS out of the /dist folder created</li>
       </ol>
-      <p>You can also go into colors.less to change around the colors of your new CSS.</p>
+      <p>You can also go into src/colors.less before building to change around the colors of your new CSS.</p>
     </div>
     <div class="section">
       <h2 id="about">About</h2>
