--- a/index.html
+++ b/index.html
@@ -204,8 +204,16 @@
       </div>
       <div class="docs">
         <pre>
-
-        </pre>
+&lt;p&gt;Insprired by &lt;a href="https://codepen.io/tmrDevelops/pen/VeRvKX" target="_blank"&gt;Imprefect Buttons&lt;/a&gt;&lt;/p&gt;
+&lt;button class="btn-large"&gt;Large&lt;/button&gt;
+&lt;button&gt;Default&lt;/button&gt;
+&lt;button class="btn-small"&gt;Small&lt;/button&gt;
+&lt;a href="#" class="paper-btn"&gt;Link&lt;/a&gt;
+&lt;div class="row"&gt;
+  &lt;div class="col-6 col"&gt;
+    &lt;button class="btn-block"&gt;Block level&lt;/button&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</pre>
       </div>
     </div>
     <div class="section">
@@ -256,6 +264,50 @@
       </fieldset>
       <div class="docs">
         <pre>
+&lt;div class="form-group"&gt;
+  &lt;label&gt;Input&lt;/label&gt;
+  &lt;input type="text" placeholder="Nice input"&gt;
+&lt;/div&gt;
+&lt;div class="row"&gt;
+  &lt;div class="col sm-4"&gt;
+    &lt;div class="form-group"&gt;
+      &lt;label&gt;Block Level&lt;/label&gt;
+      &lt;input class="input-block" type="text"&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+  &lt;div class="col sm-8"&gt;
+    &lt;div class="form-group"&gt;
+      &lt;label&gt;Block Level&lt;/label&gt;
+      &lt;input class="input-block" type="text"&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+&lt;div class="form-group"&gt;
+  &lt;label&gt;Select&lt;/label&gt;
+  &lt;select&gt;
+    &lt;option value="1"&gt;Option 1&lt;/option&gt;
+    &lt;option value="2"&gt;Option 2&lt;/option&gt;
+    &lt;option value="3"&gt;Option 3&lt;/option&gt;
+  &lt;select&gt;
+&lt;/div&gt;
+&lt;fieldset class="form-group"&gt;
+  &lt;legend&gt;Some Radio Buttons&lt;/legend&gt;
+  &lt;label for="paperRadios1" class="paper-radio"&gt; 
+    &lt;input type="radio" name="paperRadios" id="paperRadios1" value="option 1"&gt; &lt;span&gt;This is the first option&lt;span&gt;
+  &lt;/label&gt;
+  &lt;label for="paperRadios2" class="paper-radio"&gt; 
+    &lt;input type="radio" name="paperRadios" id="paperRadios2" value="option 2"&gt; &lt;span&gt;This is the second option&lt;span&gt;
+  &lt;/label&gt;
+&lt;/fieldset&gt;
+&lt;fieldset class="form-group"&gt;
+  &lt;legend&gt;Some Check Boxes&lt;/legend&gt;
+  &lt;label for="paperChecks1" class="paper-check"&gt;
+    &lt;input type="checkbox" name="paperChecks" id="paperChecks1" value="option 1"&gt; &lt;span&gt;This is the first check&lt;/span&gt;
+  &lt;/label&gt;
+  &lt;label for="paperChecks2" class="paper-check"&gt;
+    &lt;input type="checkbox" name="paperChecks" id="paperChecks2" value="option 2"&gt; &lt;span&gt;This is the second check&lt;/span&gt;
+  &lt;/label&gt;
+&lt;/fieldset&gt;
 </pre>
       </div>
     </div>
@@ -714,14 +766,11 @@ function add(x, y) {
     </div>
     <div class="section">
       <h2 id="download">Download</h2>
-      <p>Download version 0.0.0 using either of the links below.</p>
+      <p>Download the latest version (0.0.0) using either of the links below. Or download an older release via Github.</p>
       <div class="row flex-spaces text-center">
-        <div class="sm-4 col">
-          <a class="paper-btn" href="https://github.com/rhyneav/papercss/releases/download/v0.0.0/styles.css">CSS File</a>
-        </div>
-        <div class="sm-4 col">
-          <a class="paper-btn" href="https://github.com/rhyneav/papercss/releases/download/v0.0.0/styles.min.css">Minified CSS File</a>
-        </div>
+        <a class="paper-btn margin" href="https://github.com/rhyneav/papercss/releases/download/v0.0.0/styles.css">CSS File</a>
+        <a class="paper-btn margin" href="https://github.com/rhyneav/papercss/releases/download/v0.0.0/styles.min.css">Minified CSS File</a>
+        <a class="paper-btn margin" href="https://github.com/rhyneav/papercss/releases">Github Releases</a>
       </div>
       <p>If you'd rather customize things, you can build the CSS yourself via the git repo</p>
       <ol>
