--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/dist/styles.css">
+  <link rel="stylesheet" href="/dist/paper.css">
   <link rel="stylesheet" href="/demo.css">
 </head>
 
