Update README for release

--- a/index.html
+++ b/index.html
@@ -768,8 +768,8 @@ function add(x, y) {
       <h2 id="download">Download</h2>
       <p>Download the latest version (0.0.0) using either of the links below. Or download an older release via Github.</p>
       <div class="row flex-spaces text-center">
-        <a class="paper-btn margin" href="https://github.com/rhyneav/papercss/releases/download/v0.0.0/styles.css">CSS File</a>
-        <a class="paper-btn margin" href="https://github.com/rhyneav/papercss/releases/download/v0.0.0/styles.min.css">Minified CSS File</a>
+        <a class="paper-btn margin" href="https://github.com/rhyneav/papercss/releases/download/v1.0.0/paper.css">CSS File</a>
+        <a class="paper-btn margin" href="https://github.com/rhyneav/papercss/releases/download/v1.0.0/paper.min.css">Minified CSS File</a>
         <a class="paper-btn margin" href="https://github.com/rhyneav/papercss/releases">Github Releases</a>
       </div>
       <p>If you'd rather customize things, you can build the CSS yourself via the git repo</p>
