Fixed Eric Claption typo

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ function add(x, y) {
           </tr>
           <tr>
             <td>2</td>
-            <td>Eric Claption</td>
+            <td>Eric Clapton</td>
             <td>Musician</td>
             <td>Ohio, USA</td>
           </tr>
@@ -460,7 +460,7 @@ function add(x, y) {
           </tr>
           <tr>
             <td>2</td>
-            <td>Eric Claption</td>
+            <td>Eric Clapton</td>
             <td>Musician</td>
             <td>Ohio, USA</td>
           </tr>
@@ -491,7 +491,7 @@ function add(x, y) {
           </tr>
           <tr>
             <td>2</td>
-            <td>Eric Claption</td>
+            <td>Eric Clapton</td>
             <td>Musician</td>
             <td>Ohio, USA</td>
           </tr>
@@ -523,7 +523,7 @@ function add(x, y) {
     &lt;/tr&gt;
     &lt;tr&gt;
       &lt;td&gt;2&lt;/td&gt;
-      &lt;td&gt;Eric Claption&lt;/td&gt;
+      &lt;td&gt;Eric Clapton&lt;/td&gt;
       &lt;td&gt;Musician&lt;/td&gt;
       &lt;td&gt;Ohio, USA&lt;/td&gt;
     &lt;/tr&gt;
@@ -576,7 +576,7 @@ function add(x, y) {
           <button popover="Popover on top" popover-position="top">Popover on top and on a button!</button>
         </div>
       </div>
-      
+
       <div class="docs">
         <pre>
 &lt;button popover="Popover on top" popover-position="top"&gt;Popover on top and on a button!&lt;/button&gt;</pre>
